--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         vaya mucho mas rapido, Instalamos Programas "DAMOS LIMPIEZA A TU EQUIPO SIN NINGUN COSTO" Tambien Hacemos Progrmas, Base de datos,
                     Paginas Web y mas...  </p>
                     <h3><span>2</span>El Mejor Servicio</h3>
-                    <p>Nosotros traemos y llevamos Tus Equipos hata tu Domicilio, Contamos con Conocimiento en CISCO Y MYSQ</p>
+                    <p>Nosotros traemos y llevamos Tus Equipos hata tu Domicilio, Contamos con Conocimiento en CISCO Y MYSQL</p>
                 </div>
             </div>
         </section>
@@ -136,7 +136,7 @@
                     <div class="servicio-ind">
                         <img src="img/ilustracion4.png" alt="">
                         <h3>Redes Sociales</h3>
-                        <p>WHATSAPP:728436364
+                        <p>WHATSAPP:7228436364,7223836046
                             INSTAGRAM:@manuelrn_tec
                         </p>
                     </div>
@@ -158,7 +158,8 @@
         <div class="contenedor-footer">
             <div class="content-foo">
                 <h4>WHATSAPP</h4>
-                <p>7228436364</p>
+                <p>7228436364 - 7223836046
+                </p>
             </div>
             <div class="content-foo">
                 <h4>E-MAIL</h4>
