--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                     <div class="servicio-ind">
                         <img src="img/ilustracion4.png" alt="">
                         <h3>Redes Sociales</h3>
-                        <p>WHATSAPP:7228436364,7223836046
-                            INSTAGRAM:@manuelrn_tec
+                        <p>WHATSAPP:7228436364
+                          INSTAGRAM:@manuelrn_tec
                         </p>
                     </div>
                     <div class="servicio-ind">
