--- a/index.html
+++ b/index.html
@@ -137,7 +137,6 @@
                         <img src="img/ilustracion4.png" alt="">
                         <h3>Redes Sociales</h3>
                         <p>WHATSAPP:7228436364
-                        INSTAGRAM:@manuelrn_tec
                         </p>
                     </div>
                     <div class="servicio-ind">
@@ -166,8 +165,8 @@
                 <p>manuel_rn1@hotmail.com</p>
             </div>
             <div class="content-foo">
-                <h4>SERVICIO A CLIENTE</h4>
-                <p>Mediante Nuestras Redes Sociales</p>
+                <h4>INSTAGRAM</h4>
+                <p>@manuelrn_tec</p>
             </div>
         </div>
         <h2 class="titulo-final">&copy; ManuelRM TEC.| Manuel Reyes</h2>
